# Alyesa

./: .gitignore  Cargo.toml
.alyesa_memory.db/: .alyesa_history  .alyesa_memory.db
docs/: GEMINI.md  MODELS_TO_DOWNLOAD.md
scripts/: download_models.sh  start-server.sh
src/: main.rs
