[package]
name = "alyesa"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
crossterm = "0.27"
rustyline = "13.0"
dialoguer = "0.12.0"
dotenvy = "0.15.7"
